--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Aside Start -->
       <div class="aside">
         <div class="logo">
-          <a href="#"><span>P</span>portfolio</a>
+          <a href="#"><span></span>Portfolio</a>
         </div>
 
         <div class="nav-toggler">
